update html and css

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -6,7 +6,7 @@ html {
     .contents {
         .contents-inner {
             width: 940px;
-            margin: auto;
+            margin: 7.2rem auto;
         }
     }
 }
