--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -6,97 +6,168 @@ Author: Richard Clark - http://richclarkdesign.com
 Twitter: @rich_clark
 */
 
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+/deep/html,
+/deep/body,
+/deep/div,
+/deep/span,
+/deep/object,
+/deep/iframe,
+/deep/h1,
+/deep/h2,
+/deep/h3,
+/deep/h4,
+/deep/h5,
+/deep/h6,
+/deep/p,
+/deep/blockquote,
+/deep/pre,
+/deep/abbr,
+/deep/address,
+/deep/cite,
+/deep/code,
+/deep/del,
+/deep/dfn,
+/deep/em,
+/deep/img,
+/deep/ins,
+/deep/kbd,
+/deep/q,
+/deep/samp,
+/deep/small,
+/deep/strong,
+/deep/sub,
+/deep/sup,
+/deep/var,
+/deep/b,
+/deep/i,
+/deep/dl,
+/deep/dt,
+/deep/dd,
+/deep/ol,
+/deep/ul,
+/deep/li,
+/deep/fieldset,
+/deep/form,
+/deep/label,
+/deep/legend,
+/deep/table,
+/deep/caption,
+/deep/tbody,
+/deep/tfoot,
+/deep/thead,
+/deep/tr,
+/deep/th,
+/deep/td,
+/deep/article,
+/deep/aside,
+/deep/canvas,
+/deep/details,
+/deep/figcaption,
+/deep/figure,
+/deep/footer,
+/deep/header,
+/deep/hgroup,
+/deep/menu,
+/deep/nav,
+/deep/section,
+/deep/summary,
+/deep/time,
+/deep/mark,
+/deep/audio,
+/deep/video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
-body {
-    line-height:1;
+/deep/body {
+    line-height: 1;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
+/deep/article,
+/deep/aside,
+/deep/details,
+/deep/figcaption,
+/deep/figure,
+/deep/footer,
+/deep/header,
+/deep/hgroup,
+/deep/menu,
+/deep/nav,
+/deep/section {
+    display: block;
 }
 
-nav ul {
-    list-style:none;
+/deep/nav ul {
+    list-style: none;
 }
 
-blockquote, q {
-    quotes:none;
+/deep/blockquote,
+/deep/q {
+    quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
+/deep/blockquote:before,
+/deep/blockquote:after,
+/deep/q:before,
+/deep/q:after {
+    content: '';
+    content: none;
 }
 
-a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+/deep/a {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
 
 /* change colours to suit your needs */
-ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
+/deep/ins {
+    background-color: #ff9;
+    color: #000;
+    text-decoration: none;
 }
 
 /* change colours to suit your needs */
-mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
+/deep/mark {
+    background-color: #ff9;
+    color: #000;
+    font-style: italic;
+    font-weight: bold;
 }
 
-del {
+/deep/del {
     text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
+/deep/abbr[title],
+/deep/dfn[title] {
+    border-bottom: 1px dotted;
+    cursor: help;
 }
 
-table {
-    border-collapse:collapse;
-    border-spacing:0;
+/deep/table {
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* change border colour to suit your needs */
-hr {
-    display:block;
-    height:1px;
-    border:0;
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
+/deep/hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #cccccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
-input, select {
-    vertical-align:middle;
+/deep/input,
+/deep/select {
+    vertical-align: middle;
 }
