bug fix and update form

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -80,6 +80,7 @@ Twitter: @rich_clark
     border: 0;
     outline: 0;
     font-size: 100%;
+    font-weight: normal;
     vertical-align: baseline;
     background: transparent;
 }
