--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,8 +1,14 @@
-html {
-    font-size: 62.5%;
-}
+// html {
+//     font-size: 62.5%;
+//     body {
+//         margin: 0;
+//         padding: 0;
+//     }
+// }
 
 .wrapper {
+    box-sizing: border-box;
+
     .contents {
         .contents-inner {
             width: 940px;
