update form and data for graphql

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -73,7 +73,7 @@ textarea {
 
                 &:checked {
                     &:before {
-                        background: #019c96;
+                        background: #3cb2b4;
                     }
 
                 }
