--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,3 +1,5 @@
+@import "./_color.scss";
+
 input[type='text'],
 input[type='email'],
 input[type='tel'],
@@ -73,7 +75,7 @@ textarea {
 
                 &:checked {
                     &:before {
-                        background: #3cb2b4;
+                        background: $upload_blue_dark;
                     }
 
                 }
