update form css

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -5,6 +5,7 @@
 //         padding: 0;
 //     }
 // }
+@import './color';
 
 .wrapper {
     box-sizing: border-box;
@@ -17,4 +18,9 @@
             margin: 7.2rem auto;
         }
     }
+}
+
+/deep/a {
+    color: $upload_blue_dark;
+    font-weight: bold;
 }
