--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,9 +1,11 @@
-@import "./_color.scss";
+@import 'color';
 
-input[type='text'],
-input[type='email'],
-input[type='tel'],
-textarea {
+/deep/input[type='text'],
+/deep/input[type='email'],
+/deep/input[type='tel'],
+/deep/input[type='date'],
+/deep/input[type='password'],
+/deep/textarea {
     border: solid #eeeeee 1px;
 }
 
@@ -20,73 +22,6 @@ textarea {
         dd {
             display: table-cell;
 
-            input[type='text'],
-            input[type='email'],
-            input[type='tel'],
-            input[type='date'] {
-                display: inline-block;
-                border: #eeeeee solid 1px;
-                border-radius: 3px;
-                width: 12rem;
-                padding: 4px;
-                height: 2rem;
-            }
-
-            select {
-                background: $upload_blue_dark;
-                color: #ffffff;
-
-            }
-        }
-
-        .radioAndCheckbox {
-            display: inline-flex;
-            flex-wrap: wrap;
-            justify-content: flex-start;
-
-            >label {
-                width: 10rem;
-                display: inline-block;
-                margin-right: 2rem;
-                padding-bottom: 2rem;
-            }
-
-            input[type='radio'],
-            input[type='checkbox'] {
-                position: relative;
-                display: inline-block;
-
-                &:after {
-                    position: absolute;
-                    top: -10px;
-                    right: -25px;
-                    display: block;
-                    content: '';
-                    width: 15px;
-                    height: 15px;
-                    border: #eeeeee solid 1px;
-                    border-radius: 50%;
-                }
-
-                &:before {
-                    position: absolute;
-                    top: -7px;
-                    right: -22px;
-                    display: block;
-                    content: '';
-                    width: 9px;
-                    height: 9px;
-                    border: #eeeeee solid 1px;
-                    border-radius: 50%;
-                }
-
-                &:checked {
-                    &:before {
-                        background: $upload_blue_dark;
-                    }
-
-                }
-            }
         }
 
         dt {
@@ -107,32 +42,118 @@ textarea {
                 margin-bottom: 1.6rem;
             }
 
-            /deep/ .selectCustome {
-                position: relative;
-
-                /deep/ select {
-                    display: inline-block;
-                    background: $sell_green_dark;
-                    color: #ffffff;
-                    border-radius: 3px;
-                    width: 12rem;
-                    padding: 4px;
-                    height: 3rem;
-                    line-height: 2rem;
-                }
-
-                /deep/ &:after {
-                    content: "▾";
-                    color: #ffffff;
-                    position: absolute;
-                    width: 10px;
-                    height: 10px;
-                    display: block;
-                    top: 0;
-                    right: 3px;
-                }
+            input[type='text'],
+            input[type='email'],
+            input[type='tel'],
+            input[type='date'],
+            input[type='password'] {
+                display: inline-block;
+                border: #eeeeee solid 1px;
+                border-radius: 3px;
+                width: 16rem;
+                padding: 4px;
+                height: 2rem;
             }
+
+            textarea {
+                width: 100%;
+            }
+
         }
 
+    }
+}
+
+.radioAndCheckbox {
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    >label {
+        width: 10rem;
+        display: inline-block;
+        margin-right: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    input[type='radio'],
+    input[type='checkbox'] {
+        position: relative;
+        display: inline-block;
+
+        &:after {
+            position: absolute;
+            top: -10px;
+            right: -25px;
+            display: block;
+            content: '';
+            width: 15px;
+            height: 15px;
+            border: #eeeeee solid 1px;
+            border-radius: 50%;
+        }
+
+        &:before {
+            position: absolute;
+            top: -7px;
+            right: -22px;
+            display: block;
+            content: '';
+            width: 9px;
+            height: 9px;
+            border: #eeeeee solid 1px;
+            border-radius: 50%;
+        }
+
+        &:checked {
+            &:before {
+                background: #019c96;
+            }
+
+        }
+    }
+}
+
+.selectCustome {
+    position: relative;
+
+    select {
+        display: inline-block;
+        background: $sell_green_dark;
+        color: #ffffff;
+        border-radius: 3px;
+        width: 12rem;
+        padding: 4px;
+        height: 3rem;
+        line-height: 2rem;
+    }
+
+    &:after {
+        content: "▾";
+        color: #ffffff;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        display: block;
+        top: 0;
+        right: 3px;
+    }
+}
+
+.require {
+    >dt {
+        position: relative;
+
+        &:after {
+            content: "★";
+            display: block;
+            position: absolute;
+            right: 2.4rem;
+            top: 0;
+            font-size: 10px;
+            padding: 2px 6px;
+            border-radius: 2px;
+            color: $read_orange_dark;
+        }
     }
 }
