apply title design

--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -5,6 +5,8 @@ $sell_green:#19a7b1;
 $sell_green_dark:#2a8e9d;
 // ●薄
 $sell_green_light:#96cbd9;
+// ●影
+$sell_green_shadow:#2c6c75;
 
 // =========================================
 
@@ -15,6 +17,8 @@ $read_orange:#e66919;
 $read_orange_dark:#ac4a25;
 // ●薄
 $read_orange_light:#eb944d;
+// ●影
+$read_orange_shadow:#ab7f5b;
 
 // =========================================
 
@@ -25,3 +29,10 @@ $upload_blue:#2f9be2;
 $upload_blue_dark:#2578B0;
 // ●薄
 $upload_blue_light:#76BAE8;
+// ●影
+$upload_blue_shadow:#305b77;
+
+// =========================================
+$black_strong:#333333;
+$black:#666666;
+$black_weak:#999999;
