--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -24,3 +24,64 @@
     color: $upload_blue_dark;
     font-weight: bold;
 }
+
+@import './color';
+
+html {
+    font-size: 62.5%;
+}
+
+.wrapper {
+    .contents {
+        min-height: 500px;
+
+        .contents-inner {
+            width: 940px;
+            margin: 7.2rem auto;
+        }
+    }
+}
+
+/deep/.ttl_h2 {
+    font-size: 3rem;
+    color: $black;
+    background: url(/img/h2.svg)left top no-repeat;
+    padding-left: 3.6rem;
+    padding-bottom: 0.5rem;
+    background-size: 3rem;
+    border-bottom: dashed 3px $sell_green_dark;
+    margin-bottom: 2.8rem;
+}
+
+/deep/.ttl_h3 {
+    font-size: 2.4rem;
+    color: $black;
+    padding-left: 3.6rem;
+    padding-bottom: 0.5rem;
+    background-size: 2.6rem;
+    border-bottom: solid 1px $sell_green_dark;
+    margin-bottom: 2.8rem;
+    position: relative;
+
+    &:before {
+        content: '';
+        background: $sell_green_dark;
+        width: 1rem;
+        height: 1rem;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 1.2rem;
+    }
+
+    &:after {
+        content: '';
+        background: $upload_blue_dark;
+        width: 1rem;
+        height: 1rem;
+        display: block;
+        position: absolute;
+        top: 1.3rem;
+        left: 0.6rem;
+    }
+}
