update writing room and form story

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -43,23 +43,23 @@ html {
 }
 
 /deep/.ttl_h2 {
-    font-size: 3rem;
+    font-size: 2.4rem;
     color: $black;
     background: url(/img/h2.svg)left top no-repeat;
     padding-left: 3.6rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 1rem;
     background-size: 3rem;
-    border-bottom: dashed 3px $sell_green_dark;
-    margin-bottom: 2.8rem;
+    border-bottom: dashed 3px $upload_blue_dark;
+    margin-bottom: 4rem;
 }
 
 /deep/.ttl_h3 {
-    font-size: 2.4rem;
+    font-size: 2rem;
     color: $black;
     padding-left: 3.6rem;
     padding-bottom: 0.5rem;
     background-size: 2.6rem;
-    border-bottom: solid 1px $sell_green_dark;
+    border-bottom: solid 1px $upload_blue_dark;
     margin-bottom: 2.8rem;
     position: relative;
 
