bug fix of formpost

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -37,7 +37,9 @@ html {
 
         .contents-inner {
             width: 940px;
-            margin: 7.2rem auto;
+            margin: auto;
+            margin-top: 7.2rem;
+            padding-bottom: 7.2rem;
         }
     }
 }
