apply typescript to this contents

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -14,7 +14,7 @@ textarea {
     margin: 7.2rem auto;
     font-size: 1.4rem;
 
-    dl {
+    /deep/dl {
         margin-bottom: 2.4rem;
         display: table;
 
@@ -95,7 +95,7 @@ textarea {
 
 
 
-.radioAndCheckbox {
+/deep/.radioAndCheckbox {
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -145,7 +145,7 @@ textarea {
     }
 }
 
-.selectCustome {
+/deep/.selectCustome {
     position: relative;
 
     select {
@@ -171,7 +171,7 @@ textarea {
     }
 }
 
-.require {
+/deep/.require {
     >dt {
         position: relative;
 
@@ -192,7 +192,7 @@ textarea {
 @media screen and (max-width: 1024px) {}
 
 @media screen and (max-width: 900px) {
-    .form-book {
+    /deep/.form-book {
         width: 98% !important;
         margin: 2.4rem auto;
         font-size: 1.2rem;
